--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,24 +1,13 @@
 * {
     margin: 0 auto;
-    padding-right: 10px;
-    padding-left:10px;
+    text-align: center;
     box-sizing: border-box;
     font-family: Recursive, sans-serif;
-}
-
-body {
-    background-color: #D0D0D0;
 }
 
 .information {
     padding-bottom: 20px;
     padding-top: 20px;
-}
-
-.wrapper {
-    width:100%;
-    position: relative;
-    text-align: center;
 }
 
 .content{
@@ -37,6 +26,9 @@ h1 {
 /* Introduction */
 #introduction {
     width: 100%;
+    background-color: #D0D0D0;
+    padding-left: 20px;
+    padding-right:20px;
 }
 
 .profile-pic {
@@ -58,10 +50,14 @@ h1 {
 /* About me section */
 #about {
     background-color: white;
+    padding-left:20px;
+    padding-right:20px;
 }
 
 /* Projects Section */
 #projects {
+    padding-left:20px;
+    padding-right:20px;
     background-color: #D0D0D0;
 }
 
@@ -90,10 +86,13 @@ h1 {
 /*Contact section*/
 
 #contacts {
-    background: white;
+    padding-left:20px;
+    padding-right:20px;
+    background-color: white;
 }
 .contact-container {
     padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .contact-container img {
